@@ -1,5 +1,6 @@
 <?php
-// Confirm we are in Coppermine
+// Placeholder for the Coppermine API's "protected resources"
+
 define('IN_COPPERMINE', true);
 
 require_once 'cpgOAuth.php';
@@ -8,7 +9,6 @@ $matches = $superCage->post->getMatched('oauth_signature_method', '/[\w-]+/');
 
 $oauth = new cpgOAuth($superCage->post->getAlnum('oauth_consumer_key'), $superCage->post->getAlnum('oauth_nonce'), $superCage->post->getInt('oauth_timestamp'), $matches[0], $superCage->post->getAlnum('oauth_token'));
 
-$oauth->checkRequest('access');
 $oauth->accessProtectedResource();
 
 ?>
