@@ -1,6 +1,5 @@
 <?php
-// Confirm we are in Coppermine
-define('IN_COPPERMINE', true);
+// Get an unauthorized request token here, to be authorized by the user and then exchanged for an access token.
 
 require_once 'cpgOAuth.php';
 
@@ -8,6 +7,5 @@ $matches = $superCage->post->getMatched('oauth_signature_method', '/[\w-]+/');
 
 $oauth = new cpgOAuth($superCage->post->getAlnum('oauth_consumer_key'), $superCage->post->getAlnum('oauth_nonce'), $superCage->post->getInt('oauth_timestamp'), $matches[0], false);
 
-$oauth->checkRequest(false);
 $oauth->requestToken();
 ?>
