@@ -1,3 +1,5 @@
+<!-- A page to test the OAuth server: install the database tables, register a consumer, get a request token, authorize it, exchange it for a request token, and then finally access the "protected resource". -->
+
 <form method="POST" action="request_token.php">
 <?php fields(); ?>
 <input type="hidden" name="oauth_token" value="" />
@@ -21,11 +23,21 @@
 <input type="text" name="oauth_token" value="" />
 </form>
 
-<form method="POST" action="register.php">
-<input type="hidden" name="requester_name" value="David" />
+<form method="POST" action="../oauth_register.php">
+<input type="hidden" name="requester_name" value="Consumer" />
 <input type="hidden" name="requester_email" value="name@domain.com" />
 <input type="hidden" name="application_title" value="My API" />
 <button type="submit">Register Consumer</button>
+</form>
+
+<form action="<?php 
+// This should be an admin option, or perhaps part of core (?)
+define('IN_COPPERMINE', TRUE);
+require 'cpgOAuth.php';
+$store = OAuthStore::instance();
+$store->install();
+?>">
+<button type="submit">Install OAuth database tables</button>
 </form>
 
 <?php
@@ -37,10 +49,9 @@ EOT;
 print(time());
 echo <<<EOT
 " />
-<input type="hidden" name="oauth_consumer_key" value="0939a5e84f061e904d1d3319de5c6e8a04849fd94" />
+<input type="hidden" name="oauth_consumer_key" value="2bbd8af7ca3e08f07b2c59ddba316bc70485ffd55" />
 <input type="hidden" name="oauth_signature_method" value="HMAC-SHA1" />
 <!-- <input type="hidden" name="oauth_signature" value="" /> -->
-
 EOT;
 }
 ?>
